LS-2215 - fixing small issues with item details. change to always physically removing the item.